adding images in about

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
           </span>
         </div>
       </div>
+      <div class="about-images-container">
+        <div class="image-container">
+          <h2>Fast response</h2>
+          <img src="./img/fast.svg" alt="Fast response">
+        </div>
+        <div class="image-container">
+          <h2>Responsive design</h2>
+          <img src="./img/responsive.svg" alt="Fast response">
+        </div>
+        <div class="image-container">
+          <h2>Dynamic content</h2>
+          <img src="./img/animation.svg" alt="Fast response">
+        </div>
+      </div>
     </section>
     <!-- services -->
     <section id="services">
