adding services section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <!-- about me -->
-    <section id="about-me">
+    <section class="about-me" id="about-me">
       <h1>About me</h1>
       <div class="about-container">
         <img src="./img/me.jpg" alt="Profile picture">
@@ -92,10 +92,27 @@
       </div>
     </section>
     <!-- services -->
-    <section id="services">
-      <div class="title-group" style="height: 100vh">
-        <h1>Services</h1>
-        <h2>Welcome to the Website</h2>
+    <section class="services"id="services">
+      <h1>Services</h1>
+      <div class="box">
+        <span style='--i:1'><img src="./img/services/aws.svg" alt="aws"></span>
+        <span style='--i:2'><img src="./img/services/css3.svg" alt="css"></span>
+        <span style='--i:3'><img src="./img/services/html.svg" alt="html"></span>
+        <span style='--i:4'><img src="./img/services/js.svg" alt="js"></span>
+        <span style='--i:5'><img src="./img/services/mongo.svg" alt="mongo"></span>
+        <span style='--i:6'><img src="./img/services/mysql.svg" alt="mysql"></span>
+        <span style='--i:7'><img src="./img/services/node.svg" alt="node"></span>
+        <span style='--i:8'><img src="./img/services/react-native.svg" alt="react"></span>
+      </div>
+      <div class="services-images-container">
+        <div class="image-container">
+          <h2>Backend</h2>
+          <img src="./img/services/backend.svg" alt="Fast response">
+        </div>
+        <div class="image-container">
+          <h2>Frontend</h2>
+          <img src="./img/services/frontend.svg" alt="Fast response">
+        </div>
       </div>
     </section>
     <!-- projects -->
