--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <!-- about me -->
-    <section class="about-me" id="about-me">
+    <section class="about-me-section" id="about-me">
       <h1>About me</h1>
       <div class="about-container">
         <img src="./img/me.jpg" alt="Profile picture">
@@ -92,7 +92,7 @@
       </div>
     </section>
     <!-- services -->
-    <section class="services"id="services">
+    <section class="services-section"id="services">
       <h1>Services</h1>
       <div class="box">
         <span style='--i:1'><img src="./img/services/aws.svg" alt="aws"></span>
@@ -116,10 +116,18 @@
       </div>
     </section>
     <!-- projects -->
-    <section id="projects">
-      <div class="title-group" style="height: 100vh">
-        <h1>Projects</h1>
-        <h2>Welcome to the Website</h2>
+    <section class=project-section id="projects">
+      <h1>Projects</h1>
+      <p>Here is a look of my projects</p>
+      <div class="projects-container">
+        <div class="project">
+          <div class="project-img">
+            <img src="./img/services/css3.svg" alt="my first project">
+          </div>
+          <div class="project-info">
+            <h1>Photomosaic</h1>
+          </div>
+        </div>
       </div>
     </section>
     <!-- contact me -->
