adding contact section

--- a/index.html
+++ b/index.html
@@ -192,10 +192,18 @@
       </div>
     </section>
     <!-- contact me -->
-    <section id="contact">
-      <div class="title-group" style="height: 100vh">
-        <h1>Contact me</h1>
-        <h2>Welcome to the Website</h2>
+    <section class="contact-section" id="contact">
+      <h1>Contact me</h1>
+      <div class="social-icons">
+        <a href="https://github.com/andresContreras9996" target="_blank">
+          <img src="./img/socials/githubmons.svg" alt="" />
+        </a>
+        <a href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/" target="_blank">
+          <img src="./img/socials/linkedin.svg" alt="" />
+        </a>
+        <a href = "mailto: contreras9996@gmail.com">
+          <img src="./img/socials/mail.svg" alt="" />
+        </a>
       </div>
     </section>
     <!--Script-->
