--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
     <section class="contact-section" id="contact">
       <h1>Contact me</h1>
       <div class="social-icons">
-        <a href="https://github.com/andresContreras9996" target="_blank">
-          <img src="./img/socials/githubmons.svg" alt="" />
+        <a href="https://github.com/andresContreras9996" target="_blank" >
+          <img src="./img/socials/githubmons.svg" alt="Github" />
         </a>
         <a href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/" target="_blank">
-          <img src="./img/socials/linkedin.svg" alt="" />
+          <img src="./img/socials/linkedin.svg" alt="Linkedin" />
         </a>
         <a href = "mailto: contreras9996@gmail.com">
-          <img src="./img/socials/mail.svg" alt="" />
+          <img src="./img/socials/mail.svg" alt="E-mail" />
         </a>
       </div>
     </section>
