--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- presentation -->
     <div class="presentation-container" id="presentation-container">
-      <h1>Hi, I'm <span>Andres Contreras</span>.</h1>
-      <h2>I'm a software developer</h2>
+      <h1 >Hi, I'm <span>Andres Contreras</span>.</h1>
+      <h2 data-aos="fade-up" data-aos-delay="500"data-aos-once=true>I'm a software developer</h2>
       <a href="#about-me">
-        <button class="button-presentation">Know me</button>
+        <button  data-aos= 'fade-up'
+        data-aos-delay="800" data-aos-once=true class="button-presentation">Know me</button>
       </a>
     </div>
     <!-- navBar -->
@@ -67,7 +69,7 @@
     <!-- about me -->
     <section class="about-me-section" id="about-me">
       <h1>About me</h1>
-      <div class="about-container">
+      <div class="about-container" data-aos="fade-up" data-aos-once=true>
         <img src="./img/me.jpg" alt="Profile picture" />
         <div class="about-me-info">
           <h1>Who am I?</h1>
@@ -79,15 +81,15 @@
         </div>
       </div>
       <div class="about-images-container">
-        <div class="image-container">
+        <div class="image-container"  data-aos="fade-right" data-aos-delay="800" data-aos-once=true>
           <h2>Fast response</h2>
           <img src="./img/fast.svg" alt="Fast response" />
         </div>
-        <div class="image-container">
+        <div class="image-container" data-aos="fade-up" data-aos-delay="1000" data-aos-once=true>
           <h2>Responsive design</h2>
           <img src="./img/responsive.svg" alt="Fast response" />
         </div>
-        <div class="image-container">
+        <div class="image-container"  data-aos="fade-left" data-aos-delay="1200" data-aos-once=true>
           <h2>Dynamic content</h2>
           <img src="./img/animation.svg" alt="Fast response" />
         </div>
@@ -121,11 +123,11 @@
         /></span>
       </div>
       <div class="services-images-container">
-        <div class="image-container">
+        <div class="image-container" data-aos="zoom-in-right" data-aos-once=true>
           <h2>Backend</h2>
           <img src="./img/services/backend.svg" alt="Fast response" />
         </div>
-        <div class="image-container">
+        <div class="image-container" data-aos="flip-left" data-aos-delay="800" data-aos-once=true>
           <h2>Frontend</h2>
           <img src="./img/services/frontend.svg" alt="Fast response" />
         </div>
@@ -136,8 +138,8 @@
     <section class="project-section" id="projects">
       <h1>Projects</h1>
       <div class="projects-container">
-        <div class="project">
-          <div class="project-img">
+        <div class="project" data-aos="fade-right" data-aos-delay="600" data-aos-once=true>
+          <div class="project-img" data-aos="zoom-in" data-aos-delay="700" data-aos-once=true>
             <img src="./img/mosaic.png" alt="my first project" />
           </div>
           <div class="project-info">
@@ -154,8 +156,8 @@
             </div>
           </div>
         </div>
-        <div class="project">
-          <div class="project-img">
+        <div class="project" data-aos="fade-left" data-aos-delay="800" data-aos-once=true>
+          <div class="project-img" data-aos="zoom-in" data-aos-delay="900" data-aos-once=true>
             <img src="./img/slack.png" alt="my first project" />
           </div>
           <div class="project-info">
@@ -171,8 +173,8 @@
             </div>
           </div>
         </div>
-        <div class="project">
-          <div class="project-img">
+        <div class="project" data-aos="fade-right" data-aos-delay="1000" data-aos-once=true>
+          <div class="project-img" data-aos="zoom-in" data-aos-delay="1100" data-aos-once=true>
             <img src="./img/plate.png" alt="my first project" />
           </div>
           <div class="project-info">
@@ -195,20 +197,31 @@
     <section class="contact-section" id="contact">
       <h1>Contact me</h1>
       <div class="social-icons">
-        <a href="https://github.com/andresContreras9996" target="_blank" >
+        <a href="https://github.com/andresContreras9996" target="_blank"  data-aos="fade-in" data-aos-once=true>
           <img src="./img/socials/githubmons.svg" alt="Github" />
         </a>
-        <a href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/" target="_blank">
+        <a href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/" target="_blank"  data-aos="fade-in" data-aos-delay="400" data-aos-once=true>
           <img src="./img/socials/linkedin.svg" alt="Linkedin" />
         </a>
-        <a href = "mailto: contreras9996@gmail.com">
+        <a href = "mailto: contreras9996@gmail.com" data-aos="fade-in" data-aos-delay="600" data-aos-once=true>
           <img src="./img/socials/mail.svg" alt="E-mail" />
         </a>
       </div>
     </section>
     <!--Script-->
     <script src="script.js"></script>
+    
     <!-- bootstrap -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+      delay: 200, // values from 0 to 3000, with step 50ms
+      duration: 1500, // values from 0 to 3000, with step 50ms
+      once: false, 
+      mirror: false,
+      disable:'mobile',
+      });
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
