making changes in the presentation background and responsivity

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   <body>
     <!-- presentation -->
     <div class="presentation-container" id="presentation-container">
-      <h1 >Hi, I'm <span>Andres Contreras</span>.</h1>
-      <h2 data-aos="fade-up" data-aos-delay="500"data-aos-once=true>I'm a software developer</h2>
+      <div class="presentation-text-container" >
+        <h1 >Hi, I'm <span>Andres Contreras</span></h1>
+        <h2 data-aos="fade-up" data-aos-delay="500"data-aos-once=true>I'm a software developer</h2>
+      </div>
       <a href="#about-me">
         <button  data-aos= 'fade-up'
         data-aos-delay="800" data-aos-once=true class="button-presentation">Know me</button>
@@ -70,7 +72,7 @@
     <section class="about-me-section" id="about-me">
       <h1>About me</h1>
       <div class="about-container" data-aos="fade-up" data-aos-once=true>
-        <img src="./img/me.jpg" alt="Profile picture" />
+        <img  src="./img/me.jpg" alt="Profile picture" />
         <div class="about-me-info">
           <h1>Who am I?</h1>
           <span>
