full requested changes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
     <title>Andres Contreras</title>
     <!-- icon -->
     <link rel="icon" type="image/png" href="./img/letter-a.svg" />
-    <!-- fontawesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <!-- bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -147,7 +137,7 @@
           <div class="project-info">
             <h1>Photomosaic</h1>
             <p>
-              I worked with a team during my time in Nearsoft on this project, it consists of a webpage that makes a photomosaic with your
+              I worked with a team on this project, it consists of a webpage that makes a photomosaic with your
               profile picture of google account, I was in charge of the section dedicated to sending this picture to other users, using an
                SMTP server using Django, also use React for the frontend.
             </p>
@@ -165,7 +155,7 @@
           <div class="project-info">
             <h1>Slackbot</h1>
             <p>
-              Another project I worked with a team during my time in Nearsoft, it consists on a bot of the platform Slack, that read different files 
+              This is another project I worked with a team, it consists on a bot of the platform Slack, that read different files 
             of logistic, to respond to the user, in this project I worked with Node Js to make the backend with the Slack API and the
              framework Bolt.
             </p>
@@ -210,6 +200,18 @@
         </a>
       </div>
     </section>
+  <!-- fontawesome -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+/>
+<!-- bootstrap -->
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+/>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!--Script-->
     <script src="script.js"></script>
     
