--- a/index.html
+++ b/index.html
@@ -7,35 +7,49 @@
     <title>Andres Contreras</title>
     <!-- icon -->
     <link rel="icon" type="image/png" href="./img/letter-a.svg" />
-  
+
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- presentation -->
     <div class="presentation-container" id="presentation-container">
-      <div class="presentation-text-container" >
-        <h1 >Hi, I'm <span>Andres Contreras</span></h1>
-        <h2 data-aos="fade-up" data-aos-delay="500"data-aos-once=true>I'm a software developer</h2>
+      <div class="presentation-text-container">
+        <h1>Hi, I'm <span>Andres Contreras</span></h1>
+        <h2 data-aos="fade-up" data-aos-delay="500" data-aos-once="true">
+          I'm a software developer
+        </h2>
       </div>
       <a href="#about-me">
-        <button  data-aos= 'fade-up'
-        data-aos-delay="800" data-aos-once=true class="button-presentation">Know me</button>
+        <button
+          data-aos="fade-up"
+          data-aos-delay="800"
+          data-aos-once="true"
+          class="button-presentation"
+        >
+          Know me
+        </button>
       </a>
     </div>
     <!-- navBar -->
-    <nav class="navbar navbar-expand-md navbar-custom sticky-top">
+    <nav
+      class="navbar navbar-expand-md navbar-custom sticky-top"
+      id="project-navbar"
+    >
       <a class="navbar-brand" href="#">
         <img src="./img/letter-a.svg" alt="letter a" style="width: 40px" />
       </a>
-      <button
-        class="custom-toggler navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapsibleNavbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a href="#project-navbar">
+        <button
+          class="custom-toggler navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#collapsibleNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </a>
+
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -61,8 +75,8 @@
     <!-- about me -->
     <section class="about-me-section" id="about-me">
       <h1>About me</h1>
-      <div class="about-container" data-aos="fade-up" data-aos-once=true>
-        <img  src="./img/me.jpg" alt="Profile picture" />
+      <div class="about-container" data-aos="fade-up" data-aos-once="true">
+        <img src="./img/me.jpg" alt="Profile picture" />
         <div class="about-me-info">
           <h1>Who am I?</h1>
           <p>
@@ -73,15 +87,30 @@
         </div>
       </div>
       <div class="about-images-container">
-        <div class="image-container"  data-aos="fade-right" data-aos-delay="800" data-aos-once=true>
+        <div
+          class="image-container"
+          data-aos="fade-right"
+          data-aos-delay="800"
+          data-aos-once="true"
+        >
           <h2>Fast response</h2>
           <img src="./img/fast.svg" alt="Fast response" />
         </div>
-        <div class="image-container" data-aos="fade-up" data-aos-delay="1000" data-aos-once=true>
+        <div
+          class="image-container"
+          data-aos="fade-up"
+          data-aos-delay="1000"
+          data-aos-once="true"
+        >
           <h2>Responsive design</h2>
           <img src="./img/responsive.svg" alt="Fast response" />
         </div>
-        <div class="image-container"  data-aos="fade-left" data-aos-delay="1200" data-aos-once=true>
+        <div
+          class="image-container"
+          data-aos="fade-left"
+          data-aos-delay="1200"
+          data-aos-once="true"
+        >
           <h2>Dynamic content</h2>
           <img src="./img/animation.svg" alt="Fast response" />
         </div>
@@ -115,11 +144,20 @@
         /></span>
       </div>
       <div class="services-images-container">
-        <div class="image-container" data-aos="zoom-in-right" data-aos-once=true>
+        <div
+          class="image-container"
+          data-aos="zoom-in-right"
+          data-aos-once="true"
+        >
           <h2>Backend</h2>
           <img src="./img/services/backend.svg" alt="Fast response" />
         </div>
-        <div class="image-container" data-aos="flip-left" data-aos-delay="800" data-aos-once=true>
+        <div
+          class="image-container"
+          data-aos="flip-left"
+          data-aos-delay="800"
+          data-aos-once="true"
+        >
           <h2>Frontend</h2>
           <img src="./img/services/frontend.svg" alt="Fast response" />
         </div>
@@ -130,16 +168,28 @@
     <section class="project-section" id="projects">
       <h1>Projects</h1>
       <div class="projects-container">
-        <div class="project" data-aos="fade-right" data-aos-delay="600" data-aos-once=true>
-          <div class="project-img" data-aos="zoom-in" data-aos-delay="700" data-aos-once=true>
+        <div
+          class="project"
+          data-aos="fade-right"
+          data-aos-delay="600"
+          data-aos-once="true"
+        >
+          <div
+            class="project-img"
+            data-aos="zoom-in"
+            data-aos-delay="700"
+            data-aos-once="true"
+          >
             <img src="./img/mosaic.png" alt="my first project" />
           </div>
           <div class="project-info">
             <h1>Photomosaic</h1>
             <p>
-              I worked with a team on this project, it consists of a webpage that makes a photomosaic with your
-              profile picture of google account, I was in charge of the section dedicated to sending this picture to other users, using an
-               SMTP server using Django, also use React for the frontend.
+              I worked with a team on this project, it consists of a webpage
+              that makes a photomosaic with your profile picture of google
+              account, I was in charge of the section dedicated to sending this
+              picture to other users, using an SMTP server using Django, also
+              use React for the frontend.
             </p>
             <div class="project-tec-container">
               <img src="./img/services/react-native.svg" alt="" />
@@ -148,16 +198,27 @@
             </div>
           </div>
         </div>
-        <div class="project" data-aos="fade-left" data-aos-delay="800" data-aos-once=true>
-          <div class="project-img" data-aos="zoom-in" data-aos-delay="900" data-aos-once=true>
+        <div
+          class="project"
+          data-aos="fade-left"
+          data-aos-delay="800"
+          data-aos-once="true"
+        >
+          <div
+            class="project-img"
+            data-aos="zoom-in"
+            data-aos-delay="900"
+            data-aos-once="true"
+          >
             <img src="./img/slack.png" alt="my first project" />
           </div>
           <div class="project-info">
             <h1>Slackbot</h1>
             <p>
-              This is another project I worked with a team, it consists on a bot of the platform Slack, that read different files 
-            of logistic, to respond to the user, in this project I worked with Node Js to make the backend with the Slack API and the
-             framework Bolt.
+              This is another project I worked with a team, it consists on a bot
+              of the platform Slack, that read different files of logistic, to
+              respond to the user, in this project I worked with Node Js to make
+              the backend with the Slack API and the framework Bolt.
             </p>
             <div class="project-tec-container">
               <img src="./img/services/js.svg" alt="" />
@@ -165,16 +226,27 @@
             </div>
           </div>
         </div>
-        <div class="project" data-aos="fade-right" data-aos-delay="1000" data-aos-once=true>
-          <div class="project-img" data-aos="zoom-in" data-aos-delay="1100" data-aos-once=true>
+        <div
+          class="project"
+          data-aos="fade-right"
+          data-aos-delay="1000"
+          data-aos-once="true"
+        >
+          <div
+            class="project-img"
+            data-aos="zoom-in"
+            data-aos-delay="1100"
+            data-aos-once="true"
+          >
             <img src="./img/plate.png" alt="my first project" />
           </div>
           <div class="project-info">
             <h1>Plate detection</h1>
             <p>
-              I worked on this project during university, it consists of a program capable to 
-            detect plates of vehicles at the gate of a parking lot, and register the number, 
-            I used c++ and the library OpenCV.
+              I worked on this project during university, it consists of a
+              program capable to detect plates of vehicles at the gate of a
+              parking lot, and register the number, I used c++ and the library
+              OpenCV.
             </p>
             <div class="project-tec-container">
               <img src="./img/services/cplusplus.svg" alt="" />
@@ -182,48 +254,63 @@
             </div>
           </div>
         </div>
-        
       </div>
     </section>
     <!-- contact me -->
     <section class="contact-section" id="contact">
       <h1>Contact me</h1>
       <div class="social-icons">
-        <a href="https://github.com/andresContreras9996" target="_blank"  data-aos="fade-in" data-aos-once=true>
+        <a
+          href="https://github.com/andresContreras9996"
+          target="_blank"
+          data-aos="fade-in"
+          data-aos-once="true"
+        >
           <img src="./img/socials/githubmons.svg" alt="Github" />
         </a>
-        <a href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/" target="_blank"  data-aos="fade-in" data-aos-delay="400" data-aos-once=true>
+        <a
+          href="https://www.linkedin.com/in/andres-contreras-vargas-04b144192/"
+          target="_blank"
+          data-aos="fade-in"
+          data-aos-delay="400"
+          data-aos-once="true"
+        >
           <img src="./img/socials/linkedin.svg" alt="Linkedin" />
         </a>
-        <a href = "mailto: contreras9996@gmail.com" data-aos="fade-in" data-aos-delay="600" data-aos-once=true>
+        <a
+          href="mailto: contreras9996@gmail.com"
+          data-aos="fade-in"
+          data-aos-delay="600"
+          data-aos-once="true"
+        >
           <img src="./img/socials/mail.svg" alt="E-mail" />
         </a>
       </div>
     </section>
-  <!-- fontawesome -->
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-/>
-<!-- bootstrap -->
-<link
-  rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-/>
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <!-- bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!--Script-->
     <script src="script.js"></script>
-    
+
     <!-- bootstrap -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
-      delay: 200, // values from 0 to 3000, with step 50ms
-      duration: 1500, // values from 0 to 3000, with step 50ms
-      once: false, 
-      mirror: false,
-      disable:'mobile',
+        delay: 200, // values from 0 to 3000, with step 50ms
+        duration: 1500, // values from 0 to 3000, with step 50ms
+        once: false,
+        mirror: false,
+        disable: "mobile",
       });
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
